--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -9,7 +9,6 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>xml-config</module>
-        <module>annotation-config</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -17,6 +16,7 @@
         <spring.version>4.1.4.RELEASE</spring.version>
         <junit.version>4.12</junit.version>
         <aspectj.version>1.8.1</aspectj.version>
+        <cucumber.version>1.2.2</cucumber.version>
     </properties>
 
 
